--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+* {
+  scroll-behavior: smooth;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* navvv */
+.nav_set {
+  width: 100%;
+  height: 100%;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  top: 0;
+  right: 100%;
+  background: #010223;
+  z-index: 5;
 }
 
-.App-link {
-  color: #61dafb;
+@media (min-width: 1024px) {
+  .nav_set {
+    width: unset;
+    flex-direction: row;
+    height: unset;
+    position: unset;
+    background: transparent;
+    transition: all 350ms linear !important;
+  }
+  .casino-bg-img {
+    background-image: url("../src/assets/images/casino-bg.webp");
+    background-repeat: no-repeat;
+    background-size: 100% 100% !important;
+    background-position: center !important;
+  }
+  .marca-bg {
+    background-image: url("../src/assets/images/sec-1-bg-w.webp");
+    background-repeat: no-repeat;
+    background-size: 100% 100% !important;
+    background-position: center !important;
+  }
+  .ft_ep_1 {
+    filter: blur(83.5px);
+  }
+}
+.ft_ep_1 {
+  filter: blur(113.5px);
+}
+.bg-jackpot {
+  background-image: url("../src/assets/images/jackpot-bg-img.webp");
+  background-repeat: no-repeat;
+  background-size: 100% 100% !important;
+  background-position: center !important;
+}
+.bg_jackpot_2 {
+  background-image: url("../src/assets/images/jackpot-bg-2.webp");
+  background-repeat: no-repeat;
+  background-size: 100% 100% !important;
+  background-position: center !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-luxury {
+  background-image: url("../src/assets/images/luxury.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100% !important;
+  background-position: center !important;
+}
+.lanza-bg {
+  background-image: url("../src/assets/images/lanza-bg.webp");
+  background-repeat: no-repeat;
+  background-size: 100% 100% !important;
+  background-position: center !important;
+}
+
+.common-btn {
+  background: var(
+    --linear,
+    linear-gradient(307deg, #51c8ef -13.72%, #7af57a 102.02%)
+  );
+  transition: all 500ms linear;
+}
+.common-btn:hover {
+  background: var(
+    --linear,
+    linear-gradient(307deg, #7af57a 17.02%, #51c8ef 113.72%)
+  );
+}
+body {
+  background: #00141b;
+}
+.green-crd {
+  background: linear-gradient(
+    307deg,
+    rgba(81, 200, 239, 0.04) -13.72%,
+    rgba(122, 245, 122, 0.04) 102.02%
+  );
+  backdrop-filter: blur(16px);
+}
+.img_layer {
+  background-color: #000000b8 !important;
+  border-radius: 8px !important;
+  transition: all 400ms linear !important;
+}
+.Juegos-card:hover .img_layer {
+  opacity: 2 !important;
+  border: 1px solid red;
+}
+.nav_bg {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(26px);
+}
+.green_sh {
+  transition: all 350ms linear;
+}
+.green_sh:hover {
+  box-shadow: 0px 0px 12px #6ae4a6;
 }
