--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
 }
 
 .bg-luxury {
-  background-image: url("../src/assets/images/luxury.png");
+  background-image: url("../src/assets/images/luxury.webp");
   background-repeat: no-repeat;
   background-size: 100% 100% !important;
   background-position: center !important;
@@ -116,7 +116,7 @@ body {
   -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
 }
 .waviy span {
-  font-family: "Alfa Slab One", cursive;
+  /* font-family: "Alfa Slab One", cursive; */
   animation: waviy 1s infinite;
   animation-delay: calc(0.2s * var(--i));
 }
