--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ body {
   -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
 }
 .waviy span {
+  font-family: Anton, "sans-serif";
   animation: waviy 1s infinite;
   animation-delay: calc(0.2s * var(--i));
 }
